ChangeLog for the Astro project.

20200130:
	* system information interface
	* add core temperature to Temperature class
	* add system info to DaemonI class

20200129:
	* simplify the InstrumentBackend classes
	* ensure that an instrument can have only one mount, guideport,
	  adaptiveoptics and guideccd. This makes construction of guiders
	  from the instrument name simpler
	* reduce GuiderDescriptor to the instrument name in ICE protocol

20200128:
	* more configurable variables
	* get more information about kalman filter in the debug log

20200127:
	* add display of target point in processed image of StarTracker
	* add SAO star catalog
	* add flattening function to Horizon class
	* fix some bugs in the horizon parser
	* multiple bug fixes
	* add ServiceObjectPtr type

20200126:
	* add configuration documentation to the ICE interface
	* add config docu options to the snowconfig client
	* document all known configuration options

20200117:
	* make calibration faster by moving simultanously
	* add configuration keys for hot pixel detection and calibration
	* add README.starcatalogs
	* set default servicename equal to the hostname
	* add a default configuration database that already contains
	  the SIMULATOR instrumetn
	* add README files to all the directoryies needed for a running
	  installation
	* add user/group options. If astro/astro exist, they are used
	  otherwise the user running the config script is used
	* add options to automaically install systemd start script
	* addd ENABLE_SYSTEMD conditional
	* add getent script

20200116:
	* create an analysis image in the StarTracker
	* eliminate SimpleImage and replace by ImageBuffer
	* add hot pixel interpolation adapter
	* make calibration process more tolerant
	* fix StarTracker
	* add guide rates to the mount	
	* allow server to build guider using guide rates from mount
	* replace all occurencies of readdir by readdir_r for reentrancy

20200115:
	* always install device property files