@@ -10,6 +10,7 @@
 #include <map>
 #include <string>
 #include <list>
+#include <memory>
 
 namespace snowstar {
 
