@@ -1,5 +1,9 @@
 ChangeLog for the Astro project.
 
+20200201:
+	* fix some warnings in snowguide.cpp
+	* fix statistics to compile
+
 20200130:
 	* system information interface
 	* add core temperature to Temperature class
